// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`nep2 abi 1`] = `
Object {
  "events": Array [
    Object {
      "name": "transfer",
      "parameters": Array [
        Object {
          "name": "from",
          "type": "Address",
        },
        Object {
          "name": "to",
          "type": "Address",
        },
        Object {
          "decimals": 4,
          "name": "amount",
          "type": "Integer",
        },
      ],
    },
  ],
  "functions": Array [
    Object {
      "constant": true,
      "name": "name",
      "parameters": Array [],
      "returnType": Object {
        "type": "String",
      },
    },
    Object {
      "constant": true,
      "name": "symbol",
      "parameters": Array [],
      "returnType": Object {
        "type": "String",
      },
    },
    Object {
      "constant": true,
      "name": "decimals",
      "parameters": Array [],
      "returnType": Object {
        "decimals": 0,
        "type": "Integer",
      },
    },
    Object {
      "constant": true,
      "name": "totalSupply",
      "parameters": Array [],
      "returnType": Object {
        "decimals": 4,
        "type": "Integer",
      },
    },
    Object {
      "name": "transfer",
      "parameters": Array [
        Object {
          "name": "from",
          "type": "Address",
        },
        Object {
          "name": "to",
          "type": "Address",
        },
        Object {
          "decimals": 4,
          "name": "value",
          "type": "Integer",
        },
      ],
      "returnType": Object {
        "type": "Boolean",
      },
    },
    Object {
      "constant": true,
      "name": "balanceOf",
      "parameters": Array [
        Object {
          "name": "account",
          "type": "Address",
        },
      ],
      "returnType": Object {
        "decimals": 4,
        "type": "Integer",
      },
    },
  ],
}
`;

exports[`nep2 createNEP5ReadSmartContract 1`] = `
Array [
  Array [
    Object {
      "abi": Object {
        "functions": Array [
          Object {
            "constant": true,
            "name": "decimals",
            "parameters": Array [],
            "returnType": Object {
              "decimals": 0,
              "type": "Integer",
            },
          },
        ],
      },
      "address": "ALq7AWrhAueN6mJNqk6FHJjnsEoPRytLdW",
    },
  ],
  Array [
    Object {
      "abi": Object {
        "events": Array [
          Object {
            "name": "transfer",
            "parameters": Array [
              Object {
                "name": "from",
                "type": "Address",
              },
              Object {
                "name": "to",
                "type": "Address",
              },
              Object {
                "decimals": 8,
                "name": "amount",
                "type": "Integer",
              },
            ],
          },
        ],
        "functions": Array [
          Object {
            "constant": true,
            "name": "name",
            "parameters": Array [],
            "returnType": Object {
              "type": "String",
            },
          },
          Object {
            "constant": true,
            "name": "symbol",
            "parameters": Array [],
            "returnType": Object {
              "type": "String",
            },
          },
          Object {
            "constant": true,
            "name": "decimals",
            "parameters": Array [],
            "returnType": Object {
              "decimals": 0,
              "type": "Integer",
            },
          },
          Object {
            "constant": true,
            "name": "totalSupply",
            "parameters": Array [],
            "returnType": Object {
              "decimals": 8,
              "type": "Integer",
            },
          },
          Object {
            "name": "transfer",
            "parameters": Array [
              Object {
                "name": "from",
                "type": "Address",
              },
              Object {
                "name": "to",
                "type": "Address",
              },
              Object {
                "decimals": 8,
                "name": "value",
                "type": "Integer",
              },
            ],
            "returnType": Object {
              "type": "Boolean",
            },
          },
          Object {
            "constant": true,
            "name": "balanceOf",
            "parameters": Array [
              Object {
                "name": "account",
                "type": "Address",
              },
            ],
            "returnType": Object {
              "decimals": 8,
              "type": "Integer",
            },
          },
        ],
      },
      "address": "ALq7AWrhAueN6mJNqk6FHJjnsEoPRytLdW",
    },
  ],
]
`;

exports[`nep2 createNEP5SmartContract 1`] = `
Array [
  Array [
    Object {
      "abi": Object {
        "events": Array [
          Object {
            "name": "transfer",
            "parameters": Array [
              Object {
                "name": "from",
                "type": "Address",
              },
              Object {
                "name": "to",
                "type": "Address",
              },
              Object {
                "decimals": 8,
                "name": "amount",
                "type": "Integer",
              },
            ],
          },
        ],
        "functions": Array [
          Object {
            "constant": true,
            "name": "name",
            "parameters": Array [],
            "returnType": Object {
              "type": "String",
            },
          },
          Object {
            "constant": true,
            "name": "symbol",
            "parameters": Array [],
            "returnType": Object {
              "type": "String",
            },
          },
          Object {
            "constant": true,
            "name": "decimals",
            "parameters": Array [],
            "returnType": Object {
              "decimals": 0,
              "type": "Integer",
            },
          },
          Object {
            "constant": true,
            "name": "totalSupply",
            "parameters": Array [],
            "returnType": Object {
              "decimals": 8,
              "type": "Integer",
            },
          },
          Object {
            "name": "transfer",
            "parameters": Array [
              Object {
                "name": "from",
                "type": "Address",
              },
              Object {
                "name": "to",
                "type": "Address",
              },
              Object {
                "decimals": 8,
                "name": "value",
                "type": "Integer",
              },
            ],
            "returnType": Object {
              "type": "Boolean",
            },
          },
          Object {
            "constant": true,
            "name": "balanceOf",
            "parameters": Array [
              Object {
                "name": "account",
                "type": "Address",
              },
            ],
            "returnType": Object {
              "decimals": 8,
              "type": "Integer",
            },
          },
        ],
      },
      "networks": Object {
        "main": Object {
          "address": "ALq7AWrhAueN6mJNqk6FHJjnsEoPRytLdW",
        },
      },
    },
  ],
]
`;
